...
                    val context = applicationContext
                    createNotificationChannel(context)
                    var userVM : UserViewModel = hiltViewModel()

                    simonDiceScreen(
                        viewModel = SimonDiceViewModel(),
                        leaderboard = LeaderboardViewModel(),
                        userViewModel =  userVM,
                        darkMode = darkmode, onDarkModeChange = {
                            coroutineScope.launch{
                                store.saveDarkModeValue(it)
                            }
                        })
...
}

private fun createNotificationChannel(context: Context) {
    // Create the NotificationChannel, but only on API 26+ because
    // the NotificationChannel class is new and not in the support library
    if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.O) {
        val name = "SIMON DICE"
        val descriptionText = "SIMON DICE APP"
        val importance = NotificationManager.IMPORTANCE_DEFAULT
        val channel = NotificationChannel("TOP", name, importance).apply {
            description = descriptionText
        }
        // Register the channel with the system
...
