...
class LeaderboardViewModel(
): ViewModel() {
    private val _top10 = MutableStateFlow(mutableListOf<User>())
    val top10: StateFlow<List<User>> = _top10

    private val _entry = MutableStateFlow<Boolean>(true)
    val entry: StateFlow<Boolean> = _entry

    private val _return = MutableStateFlow(true)
    val returnB : StateFlow<Boolean> = _return

    private val _justShow = MutableStateFlow(false)
    val justShow : StateFlow<Boolean> = _justShow
...
